# old-playground

POC-SEXEC/: README.md
POC-SEXEC/src/: Computer.java  SymbolicExecutionExample.java
binary-tree-printer/: LICENSE  README.md  pom.xml
binary-tree-printer-react-client/: README.md  index.html  main.js  package.json
binary-tree-printer-react-client/actions/: BinaryTreeActionCreators.js
binary-tree-printer-react-client/components/: BinaryTreeDisplayContainer.js
binary-tree-printer-react-client/reducers/: reducers.js
binary-tree-printer-react-client/sagas/: sagas.js
french-java-stemmer/: README.md
french-java-stemmer/src/: Main.java
frontend-compiler-example/: README.md
frontend-compiler-example/src/: Main.java
frontend-compiler-example/src/expression/: ConstantExpression.java  ContextHolder.java  Expression.java  IdExpression.java  Node.java  Parser.java  Temp.java
frontend-compiler-example/src/expression/logical/: AndLogicalExpression.java  LogicalExpression.java  NotLogicalExpression.java  OrLogicalExpression.java  RelLogicalExpression.java
frontend-compiler-example/src/expression/operator/: AccessArrayExpression.java  ArithmeticExpression.java  OperationExpression.java  UnaryExpression.java
frontend-compiler-example/src/expression/statements/: BaseStatement.java  BreakSatement.java  ContinueStatement.java  DoBaseStatement.java  ElseBaseStatement.java  IfBaseStatement.java  SequenceBaseStatement.java  SetBaseStatement.java  SetElemBaseStatement.java  WhileStatement.java
frontend-compiler-example/src/lexer/: Lexer.java
frontend-compiler-example/src/token/: ArrayTypeWordToken.java  NumToken.java  RealToken.java  TagToken.java  Token.java  TypeWordToken.java  WordToken.java
gaussian-function/: README.md  index.html
geany-qop-plugin/: README.md
gedit/: NEWS  README.md  gedit.doap  meson.build  meson_options.txt
gedit/build-aux/flatpak/: org.gnome.gedit.yml
gedit/build-aux/win32/installer/: COPYING.rtf
gedit/data/: meson.build  org.gnome.gedit.appdata.xml.in  org.gnome.gedit.gschema.xml.in
gedit/data/icons/: meson.build
gedit/docs/: roadmap.md
gedit/docs/reference/: api-breaks.xml  gedit-sections.txt  meson.build
gedit/gedit/: Gedit-3.0.metadata  gedit-app-osx.m  gedit-app-private.h  gedit-app.c  gedit-app.h  gedit-close-confirmation-dialog.c  gedit-commands-file.c  gedit-commands-help.c  gedit-document.c  gedit-file-chooser-dialog-gtk.c  gedit-file-chooser-dialog-osx.m  gedit-io-error-info-bar.c  gedit-io-error-info-bar.h  gedit-preferences-dialog.c  gedit-settings.c  gedit-settings.h  gedit-tab-private.h  gedit-tab.c  gedit-tab.h  gedit-utils.c  gedit-utils.h  gedit-view-frame.c  gedit-view-frame.h  gedit-view.c  gedit-window.c  gedit.c  gedit.rc  meson.build
gedit/gedit/resources/: meson.build
gedit/gedit/resources/ui/: gedit-shortcuts.ui  gedit-window.ui
gedit/help/C/: gedit-close-file.page  gedit-create-new-file.page  gedit-files-basic.page  gedit-open-on-server.page  gedit-open-recent.page  gedit-plugins-insert-date-time.page  gedit-plugins-install.page  gedit-quickstart.page  gedit-save-file.page  gedit-shortcut-keys.page  gedit-tab-groups.page  gedit-tabs-moving.page  gedit-tabs.page
gedit/help/ca/: ca.po
gedit/help/cs/: cs.po
gedit/help/da/: da.po
gedit/help/es/: es.po
gedit/help/fr/: fr.po
gedit/help/gl/: gl.po
gedit/help/id/: id.po
gedit/help/pl/: pl.po
gedit/help/pt_BR/: pt_BR.po
gedit/help/sv/: sv.po
gedit/plugins/externaltools/data/: send-to-fpaste.tool.in
gedit/plugins/externaltools/tools/: functions.py  manager.py
gedit/plugins/pythonconsole/pythonconsole/: console.py
gedit/plugins/quickopen/quickopen/: virtualdirs.py
gedit/plugins/snippets/snippets/: document.py  library.py  placeholder.py  substitutionparser.py
gedit/po/: ca.po  cs.po  da.po  de.po  dz.po  eu.po  fi.po  fr.po  he.po  hr.po  hu.po  it.po  ja.po  ko.po  lt.po  lv.po  ms.po  nb.po  pl.po  tr.po  uk.po  zh_TW.po
gradient-descent/: README.md  pom.xml
gradient-descent/latex/: gradient-descent  gradient-descent.aux  gradient-descent.dvi
gradient-descent/latex/html/: gradient-descent.4ct  gradient-descent.4tc  gradient-descent.aux  gradient-descent.css  gradient-descent.dvi  gradient-descent.html  gradient-descent.idv  gradient-descent.lg  gradient-descent.xref
gradient-descent/src/main/java/: EarthOrbitalSpeedSurface.java  EarthOrbitalSpeedTimeSeries.java
image-search/: README.md  pom.xml
image-search/src/main/resources/: image-operations.properties  jdbc.properties  log4j.properties
image-search/src/main/webapp/WEB-INF/: web.xml  (+1 more)
java-game-boy-emulator-dev/: README.md
json-prettifier/: CMakeLists.txt  README.md  json-prettifier.c  json-prettifier.h  json-prettifier.h.in
json-prettifier/debian/: README.source  changelog  control  copyright  rules
jsonparser/: README.md
leafpad/: AUTHORS  README
leafpad/data/: leafpad.desktop
leafpad/po/: bg.po  br.po  ca.po  cs.po  el.po  he.po  ja.po  ko.po  pt.po  ru.po  sk.po  sv.po  ta.po  tr.po  uk.po
leafpad/src/: Makefile.am  Makefile.in  callback.c  callback.h  edittextfeatures.c  edittextfeatures.h  leafpad.h  menu.c
missing-translation-checker-maven-plugin/: README.md  pom.xml
missing-translation-checker-maven-plugin-usage/: README.md  pom.xml
missing-translation-checker-maven-plugin-usage/src/main/java/: PluginUserMain.java
ml-reco-books-cpp/: Book.cpp  Book.h  BookCategory.cpp  BookCategory.h  Catalog.cpp  Catalog.h  MlRecoUtils.h  README.md  catalog.json  main.cpp
ml-reco-books-cpp/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.properties  project.xml
ml-reco-books-cpp/nbproject/private/: private.xml
ml-reco-books-python/: README.md  main.py  requirements.txt
ml-reco-books-python/mlrecobooks/: data_extractor.py  plotter.py
newton-raphson/: README.md
newton-raphson/src/: Launcher.java
prototype-game/: README.md
samybadjoudj.github.io/: sitemap.xml
scroll/: README.md
shunting-yard-dijkstra/: README.md
(+118 files in other folders)
